<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2009 BadPopcorn, Inc.
  
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
  
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/settings_notification_category_title">
    <CheckBoxPreference android:key="notification_enabled"
      android:title="@string/settings_notification_title"
      android:summary="@string/settings_notification_summary"
      android:defaultValue="true" />
    <ListPreference android:key="notification_log_level"
      android:title="@string/settings_notification_log_level_title"
      android:summary="@string/settings_notification_log_level_summary"
      android:entries="@array/log_level_names" android:entryValues="@array/log_level_values"
      android:dialogTitle="@string/settings_notification_log_level_title"
      android:defaultValue="@string/settings_notification_log_level_default" />
    <RingtonePreference android:key="notification_sound"
      android:title="@string/settings_notification_sound_title"
      android:showDefault="true" android:showSilent="true"
      android:ringtoneType="notification" android:defaultValue="@string/settings_notification_sound_default" />
    <CheckBoxPreference android:key="notification_vibrate"
      android:title="@string/settings_notification_vibrate_title"
      android:summary="@string/settings_notification_vibrate_summary"
      android:defaultValue="false" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/settings_events_category_title">
    <CheckBoxPreference android:key="events_enabled"
      android:title="@string/settings_events_enabled_title"
      android:summary="@string/settings_events_enabled_summary"
      android:defaultValue="false" />
    <CheckBoxPreference android:key="events_sms_enabled"
      android:title="@string/settings_events_sms_enabled_title"
      android:summary="@string/settings_events_sms_enabled_summary"
      android:defaultValue="false" />
    <ListPreference android:key="events_log_level"
      android:title="@string/settings_events_log_level_title"
      android:summary="@string/settings_events_log_level_summary"
      android:entries="@array/events_log_level_names"
      android:entryValues="@array/events_log_level_values"
      android:dialogTitle="@string/settings_events_dialog_log_level_title"
      android:defaultValue="@string/settings_events_dialog_log_level_default" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/settings_system_category_title">
    <CheckBoxPreference android:key="system_logging_verbose"
      android:title="@string/settings_system_logging_verbose_title"
      android:summary="@string/settings_system_logging_verbose_summary"
      android:defaultValue="false" />
  </PreferenceCategory>
</PreferenceScreen>