<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2009 BadPopcorn, Inc.
  
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
  
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/intentfilters_list_menu_new_item"
    android:title="@string/intentfilters_list_menu_new_label"
    android:icon="@android:drawable/ic_menu_add" />
  <item android:id="@+id/intentfilters_list_menu_event_webhook_item"
    android:title="@string/intentfilters_list_menu_event_webhook_label"
    android:icon="@android:drawable/ic_menu_edit" />
  <item android:id="@+id/intentfilters_list_menu_about_item"
    android:title="@string/intentfilters_list_menu_about_label"
    android:icon="@android:drawable/ic_menu_info_details" />
</menu>
